[gd_scene load_steps=2 format=3 uid="uid://bep2ry8kpkusw"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_tckqe"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tckqe")

[node name="TileInfo" type="Node" parent="."]

[node name="TileInfoPanel" type="Panel" parent="TileInfo"]
offset_left = 1332.0
offset_top = 1089.0
offset_right = 1512.0
offset_bottom = 1154.0

[node name="TileInfoLabel" type="Label" parent="TileInfo/TileInfoPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 18.0
offset_right = 131.0
offset_bottom = 44.0
text = "Info of Tile"

[node name="TileText" type="Node" parent="."]

[node name="TileTextPanel" type="Panel" parent="TileText"]
offset_left = 1284.0
offset_top = 680.0
offset_right = 1544.0
offset_bottom = 1044.0
metadata/_edit_use_anchors_ = true

[node name="TileTextLabel" type="Label" parent="TileText/TileTextPanel"]
layout_mode = 0
offset_left = 66.0
offset_top = 21.0
offset_right = 187.0
offset_bottom = 47.0
text = "Tile Description"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="TileText/TileTextPanel"]
layout_mode = 0
offset_left = 235.0
offset_top = 6.0
offset_right = 253.0
offset_bottom = 37.0
text = "X"
metadata/_edit_use_anchors_ = true

[node name="HudTop" type="Node" parent="."]

[node name="Panel" type="Panel" parent="HudTop"]
offset_left = 61.0
offset_top = 14.0
offset_right = 1565.0
offset_bottom = 39.0

[node name="Label" type="Label" parent="HudTop/Panel"]
layout_mode = 0
offset_left = 683.0
offset_top = -1.0
offset_right = 751.0
offset_bottom = 25.0
text = "Tiles"

[node name="PanelFPS" type="Panel" parent="."]
layout_mode = 0
offset_left = 1397.0
offset_top = 63.0
offset_right = 1577.0
offset_bottom = 188.0

[node name="FPSLabelDesc" type="Label" parent="PanelFPS"]
layout_mode = 0
offset_left = 47.0
offset_top = 11.0
offset_right = 123.0
offset_bottom = 34.0
text = "Debugger
"

[node name="FPSLabel" type="Label" parent="PanelFPS"]
layout_mode = 0
offset_left = 12.0
offset_top = 42.0
offset_right = 88.0
offset_bottom = 65.0
text = "0 FPS
"

[node name="CheckButtonGlobalTime" type="CheckButton" parent="PanelFPS"]
layout_mode = 0
offset_left = 1.0
offset_top = 64.0
offset_right = 45.0
offset_bottom = 88.0
scale = Vector2(1.46917, 1.55461)

[node name="TimeLabel" type="Label" parent="PanelFPS"]
layout_mode = 0
offset_left = 68.0
offset_top = 71.0
offset_right = 108.0
offset_bottom = 94.0
text = "Day"

[connection signal="pressed" from="TileText/TileTextPanel/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="PanelFPS/CheckButtonGlobalTime" to="." method="_on_check_button_global_time_toggled"]
